--- a/management/univention-web/css/TitlePane.styl
+++ b/management/univention-web/css/TitlePane.styl
@@ -22,6 +22,7 @@
 
 .umc .dijitTitlePane
 	margin-bottom: 3em
+	overflow: visible
 
 
 .umc .dijitTitlePane:last-child
