--- a/management/univention-web/css/document.styl
+++ b/management/univention-web/css/document.styl
@@ -109,8 +109,9 @@ for i in (1..5)
 	.dijitSelect
 		background-color: $document-background-color
 
-	.dijitButton
-		box-shadow: none
+	.umcPageFooter
+		.dijitButton
+			material-flat-button()
 
 .umcStandby
 	background: no-repeat center url('images/standbyAnimation.svg')
