--- a/management/univention-web/css/form/Common.styl
+++ b/management/univention-web/css/form/Common.styl
@@ -335,17 +335,13 @@ label
 	.umcUploader,
 	.umcMultiObjectSelect
 		.dijitButton
-			box-shadow: none
-			margin-left: 0
+			material-flat-button()
+			margin-left: -14px
 			margin-right: 24px
 			margin-bottom: 0
 
 			&:last-child
-				margin-right: 0
-
-		.dijitButton:not(.dijitButtonHover)
-			.dijitButtonNode
-				background-color: transparent
+				margin-right: -14px
 
 
 
