--- a/management/univention-web/css/site/header.styl
+++ b/management/univention-web/css/site/header.styl
@@ -109,6 +109,7 @@ insertBorder()
 		margin-right: 30px
 		position: absolute
 		right: 0
+		top: 0
 
 		.umcLiveSearch
 			display: inline-block
