--- a/management/univention-web/css/site/widgets.styl
+++ b/management/univention-web/css/site/widgets.styl
@@ -59,7 +59,7 @@
 					height: 16px
 					margin: 0 8px
 					transition: opacity 0.2s
-					opacity: 0.5
+					opacity: 0.4
 					^[-3].dijitButtonHover ^[-3..-1]
 						opacity: 0.7
 					^[-3].dijitButtonActive ^[-3..-1]
@@ -67,7 +67,7 @@
 
 	/* Buttons were cut off a little to the left - this fixes it*/
 	.umcMultiInputAddButton
-		margin: -8px 0 0 8px
+		margin: -8px 0 0 -6px
 
 .umc .umcContainerWidget:last-child > .umcLabelPane .umcMultiInput
 	margin-bottom: 0
